# c_bars

./: .gitignore  .gitmodules  Makefile  README.md  meson.build
bars/: bars.c  bars.h  meson.build
bars-test/: bars-test.c  meson.build
submodules/greatest/: greatest.h
